--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <button (click)="fetchAirById(airlineId)">Add Airline Id</button>
 <button (click)="addAirline()">Add Airline</button>
 <button (click)="fetchAir()">Fetch Airlines</button>
-<p class="message">id of passengers for testing: 602e4361822376ee664e937c, 602e4b4f8223764e694e9389, 602e54f8822376b4fe4e938c, 60334af2331d52e7e17257b6, 603365af4b0d3358eb4a5b98, 60360176cb8aca68b76445c9</p>
+<p class="message"><a href="https://api.instantwebtools.net/v1/passenger" target="_blank">для проверки</a> необходимо пройти по ссылке(грузится долго)</p>
 <hr>
 <input type="string" [(ngModel)]="passengersId"> 
 <button (click)="addPassengerById(passengersId)">Add Passenger</button> 
